-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.3.2, 10.3.3
-
Fix Version/s: 10.3.4
-
Component/s: Storage Engine - InnoDB
While the redo log format was changed in MariaDB 10.3.2 and 10.3.3 due to MDEV-12288 and MDEV-11369, it should be technically possible to upgrade from a crashed MariaDB 10.2 instance.
On a related note, it should be possible for Mariabackup 10.3 to create a backup from a running MariaDB Server 10.2.
Currently, both these are refused due to redo log format tag mismatch. We should remove the refusal and test the upgrade.
The format tag will still serve its main purpose: preventing an older version of MariaDB from starting up from newer InnoDB files. Even that one we could theoretically relax if desired, in a separate issue: allow 10.2 to start up on files left behind by a clean shutdown of 10.3.
- is duplicated by
-
MDEV-13688 Error messages upon refusal to crash-upgrade can be misleading
-
- Closed
-
- relates to
-
MDEV-11369 Instant add column for InnoDB
-
- Closed
-
-
MDEV-12288 Reset DB_TRX_ID when the history is removed, to speed up MVCC
-
- Closed
-